<resources>
    <string name="app_name">WanShare</string>
    <string name="app_project_show">项目公示</string>
    <string name="app_vote_add_coin">投票上币</string>
    <string name="app_share_money">天天分红</string>
    <string name="app_feedback">问题反馈</string>
    <string name="app_star_exchange">明星交易所</string>
    <string name="app_recommend_project">推荐项目</string>
    <string name="app_search">搜索</string>
    <string name="app_jump">进入</string>
    <string name="app_star">明星</string>
    <string name="app_certification_body">认证机构</string>
    <string name="app_add_exchange_num">上线交易所</string>
    <string name="app_exchange">交易所</string>
    <string name="app_trade_market">交易市场</string>
    <string name="app_amout">成交额</string>
    <string name="app_market_value">市值</string>
    <string name="app_24h">/24h</string>
    <string name="app_home_page">首页</string>
    <string name="app_favorite">收藏</string>
    <string name="app_everyone_exchange">人人交易所</string>
    <string name="app_entrust">委托</string>
    <string name="app_mine_please_sign_in">请登录</string>
    <string name="app_mine">我的</string>
    <string name="app_mine_uid">UID: %s</string>
    <string name="app_mine_total_assets">总资产估值(BTC)</string>
    <string name="app_mine_charge">充币</string>
    <string name="app_mine_mention">提币</string>
    <string name="app_mine_set_handling_fee">CCEC支付手续费</string>
    <string name="app_mine_authentication">身份认证</string>
    <string name="app_mine_safety">安全</string>
    <string name="app_mine_coin_address">提币地址</string>
    <string name="app_mine_help">帮助</string>
    <string name="app_mine_set">设置</string>
    <string name="app_um_key">5b602dfe8f4a9d4c7b00013e</string>
    <string name="app_um_channel">Umeng</string>
    <string name="app_back_press_hint">再次点击退出</string>
</resources>
