<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="223dp"
    android:background="@color/color_white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_app_mine_page"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginLeft="@dimen/font_size_15"
        android:layout_marginRight="@dimen/font_size_15"
        android:background="@drawable/ic_zichang_pic"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="32dp"
            android:gravity="bottom"
            android:text="@string/app_mine_total_assets"
            android:textSize="12sp"
            android:textColor="@color/color_white2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="30dp">

            <TextView
                android:id="@+id/tv_app_minepage_asset_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="******"
                android:textSize="30sp"
                android:textColor="@color/color_white2"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_center_tiaoz"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_app_minepage_asset_rmb"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="32dp"
            android:layout_weight="1"
            android:gravity="top"
            android:text="*******"
            android:textColor="@color/color_white2"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

        <TextView
            android:id="@+id/tv_minepage_asset_charge_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_recharge"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/font_size_16"
            android:text="@string/app_mine_charge"
            android:textSize="15sp"
            android:textColor="@color/color_gray_dark2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

        <TextView
            android:id="@+id/tv_minepage_asset_mention_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_putforw"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/font_size_16"
            android:text="@string/app_mine_mention"
            android:textSize="15sp"
            android:textColor="@color/color_gray_dark2"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
