<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="6dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_project_logo"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_home_btb" />

            <TextView
                android:id="@+id/tv_project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="BTC"
                android:textColor="@color/color_gray_dark2"
                android:textSize="@dimen/font_size_15" />

            <TextView
                android:id="@+id/tv_project_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="(Bitcoin)"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/app_add_exchange_num"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />

            <TextView
                android:id="@+id/tv_onlie_exchange_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="13dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@color/color_gray_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/view"
                android:text="@string/app_market_value"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />

            <TextView
                android:id="@+id/tv_market_value_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/tv_exchange_amout_num"
                android:text="@string/app_24h"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/view"
                android:text="@string/app_amout"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />

            <TextView
                android:id="@+id/tv_project_amout_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@id/tv_exchange_amout_num"
                android:text="@string/app_24h"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_12" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_gray_light1" />

        <TextView
            android:id="@+id/tv_project_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="15dp"
            android:text="最新进展：CCEC上线万象交易所"
            android:textColor="@color/color_gray_dark2"
            android:textSize="@dimen/font_size_12" />
        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="15dp">-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_icon"-->
        <!--android:src="@drawable/ic_home_jigou"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

        <!--<TextView-->
        <!--android:id="@+id/tv_certification"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_toRightOf="@id/iv_icon"-->
        <!--android:text="@string/app_certification_body"-->
        <!--android:textColor="@color/color_gray_dark1"-->
        <!--android:textSize="@dimen/font_size_12" />-->

        <!--<LinearLayout-->
        <!--android:id="@+id/ll_certification_container"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_toRightOf="@id/tv_certification"-->
        <!--android:orientation="vertical">-->

        <!--</LinearLayout>-->

        <!--<TextView-->
        <!--android:id="@+id/tv_exchange_num"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:text="5"-->
        <!--android:textColor="@color/color_gray_dark1"-->
        <!--android:textSize="@dimen/font_size_12" />-->

        <!--<TextView-->
        <!--android:id="@+id/tv_exchange"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_toLeftOf="@id/tv_exchange_num"-->
        <!--android:text="@string/app_exchange"-->
        <!--android:textColor="@color/color_gray_dark1"-->
        <!--android:textSize="@dimen/font_size_12" />-->

        <!--<ImageView-->
        <!--android:src="@drawable/ic_home_jiaoyisuo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_toLeftOf="@id/tv_exchange" />-->
        <!--</RelativeLayout>-->

    </LinearLayout>

</android.support.v7.widget.CardView>
